kube_resources/examplePod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: examplereact
spec:
  containers:
  - name: react
    image: example
